2006-07-31  Sushma Rai  <rsushma@novell.com>

	* camel/camel-stub-marshal.c (do_read): Come out of the loop on
	failure. Fixes the hang.
	(marshal_read): Resetting the byte array size when read fails.
	Patch submitted by "Jeffrey Stedfast <fejj@novell.com>" and
	"Arunprakash <twizst@gmail.com>". Fixes #344196 and Novell
	bugzilla bug https://bugzilla.novell.com/show_bug.cgi?id=179545.

2006-07-27  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes Novell bugzilla bug #170058
	* calendar/e-cal-backend-exchange-calendar.c: 
	(discard_alarm): Check if the icalcomponent is set
	in ECalComponent before removing the alarms.

2006-07-24  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.7.90
	* NEWS : Updated

2006-07-24  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c (e_contact_from_props) 
	(build_message)(e_book_backend_exchange_modify_contact):
	Incorporated the changes in EContactPhoto structure. Fixes #347870. 

2006-07-24  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_start_book_view): Rescanning folders to update 
	the folder tree.
	(e_book_backend_exchange_remove): Remove the stale gconf entry of 
	folder deleted from some other client. Fixes #313081.

2006-07-22  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c: Corrected the birthday and
	anniversary date read. Fixes #332304
	patch Submitted by "Vandana Shenoy .B <shvandana@novell.com>"

2006-07-12  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #344651
	* calendar/e-cal-backend-exchange.c: (build_msg):
	avoid crash when importing events with 
	attachements which are MIME references instead of file names by ignoring
	these attachments (e.g. ATTACH:CID:0fd601c67efb$ef66760d$_CDOEX)

	Committed on behalf of Patrick Ohly <patrick.ohly@intel.com> 

2006-07-10  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.7.4
	* NEWS : Updated
