@@ -1,3 +1,9 @@
+2006-08-07  Sushma Rai  <rsushma@novell.com>
+
+	* camel/camel-stub.c (connect_to_storage): Handling the error when the
+	socket file path has changed and displaying proper error message.
+	Fixes #274321
+
 2006-07-31  Sushma Rai  <rsushma@novell.com>
 
 	* camel/camel-stub-marshal.c (do_read): Come out of the loop on
